<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bottombar_settings"
        android:icon="@drawable/ic_letter_o"
        android:iconTint="@color/white"
        android:title="@string/menu_title_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottombar_selection"
        android:icon="@drawable/ic_letter_s"
        android:iconTint="@color/white"
        android:title="@string/menu_title_selection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottombar_list"
        android:icon="@drawable/ic_dice_24dp"
        android:iconTint="@color/white"
        android:title="@string/menu_title_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottombar_create"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/white"
        android:title="@string/menu_title_create"
        app:showAsAction="ifRoom" />
</menu>