<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="32dp">

    <LinearLayout
        android:id="@+id/bottomsheet_trick_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="26dp"
        android:paddingEnd="26dp">

        <TextView
            android:id="@+id/bottomsheet_trick_edit__trick_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/trick_settings_bottomsheet_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/bottomsheet_trick_edit__direction_in_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"
            app:sbg_animateSelector="fastOutSlowIn"
            app:sbg_animateSelectorDuration="@integer/segmented_controls_animation_duration"
            app:sbg_dividerColor="@color/colorAccent"
            app:sbg_dividerSize="0dp"
            app:sbg_position="0"
            app:sbg_radius="5dp"
            app:sbg_ripple="false"
            app:sbg_selectorColor="@color/colorSecondary">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__direction_in_regular"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_direction_in_regular"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__direction_in_fakie"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_direction_in_fakie"
                app:sb_textColor="@color/white" />
        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bottomsheet_trick_edit__text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorSecondary"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/colorSecondaryDark"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bottomsheet_trick_edit__trick_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trick_create_fragment_text_input_field"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/bottomsheet_trick_edit__direction_out_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"
            app:sbg_animateSelector="fastOutSlowIn"
            app:sbg_animateSelectorDuration="@integer/segmented_controls_animation_duration"
            app:sbg_dividerColor="@color/colorAccent"
            app:sbg_dividerSize="0dp"
            app:sbg_position="0"
            app:sbg_radius="5dp"
            app:sbg_ripple="false"
            app:sbg_selectorColor="@color/colorSecondary">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__direction_out_to_regular"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_direction_out_to_regular"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__direction_out_to_fakie"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_direction_out_to_fakie"
                app:sb_textColor="@color/white" />
        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

        <co.ceryle.segmentedbutton.SegmentedButtonGroup
            android:id="@+id/bottomsheet_trick_edit__difficulty_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="3dp"
            app:sbg_animateSelector="fastOutSlowIn"
            app:sbg_animateSelectorDuration="@integer/segmented_controls_animation_duration"
            app:sbg_dividerColor="@color/colorAccent"
            app:sbg_dividerSize="0dp"
            app:sbg_position="0"
            app:sbg_radius="3dp"
            app:sbg_ripple="false"
            app:sbg_selectorColor="@color/colorSecondary">

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__difficulty_save"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_difficulty_save"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__difficulty_easy"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginStart="@dimen/segmented_controls_button_margin"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_difficulty_easy"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__difficulty_middle"
                android:layout_width="0dp"
                android:layout_height="@dimen/segmented_controls_height"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_difficulty_middle"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__difficulty_hard"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_difficulty_hard"
                app:sb_textColor="@color/white" />

            <co.ceryle.segmentedbutton.SegmentedButton
                android:id="@+id/bottomsheet_trick_edit__difficulty_crazy"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="@dimen/segmented_controls_button_margin"
                android:layout_weight="1"
                android:background="@color/colorSecondaryDark"
                app:sb_text="@string/trick_difficulty_crazy"
                app:sb_textColor="@color/white" />
        </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="@color/colorSecondary"-->
    <!--android:textSize="18sp"-->
    <!--android:textStyle="bold"-->
    <!--tools:text="Delete Axle Stall?" />-->

    <!--<TextView-->
    <!--android:id="@+id/difficulty"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="@color/colorSecondary"-->
    <!--android:textSize="16sp"-->
    <!--tools:text="Difficulty: Easy" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <ImageView
            android:id="@+id/bottomsheet_trick_edit_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorSecondaryDark"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/bottomsheet_trick_edit_delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorSecondaryDark"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete_forever_white_24dp" />

        <ImageView
            android:id="@+id/bottomsheet_trick_edit_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@color/colorSecondaryDark"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_check"
            android:tint="@color/white" />

    </LinearLayout>

</LinearLayout>